# olympus-riff-parser-py

./: README.md  pyproject.toml
olympus_riff_parser_py/: __init__.py  bytes_utils.py  datetime_utils.py  parser.py
tests/: test_read.py
