[project]
name = "olympus_riff_parser_py"
version = "0.1.0"
description = "Parser for Olympus RIFF metadata"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["tests*", "samples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[dependency-groups]
dev = ["pytest>=8.4.1"]
